--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,16 +47,22 @@ dependencies {
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.pusher:pusher-java-client:0.3.1'
     compile 'com.google.dagger:dagger:2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     apt 'com.google.dagger:dagger-compiler:2.0'
+
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
     //debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     //releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+
     // Testing-only dependencies
     androidTestCompile 'com.android.support:support-annotations:22.1.1'
     androidTestCompile 'com.android.support.test:runner:0.2'
     androidTestCompile 'com.android.support.test:rules:0.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
     testCompile 'io.reactivex:rxandroid:0.24.0'
