--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.hamcrest:hamcrest-core:1.1'
+    }
+}
+
 android {
 
     compileSdkVersion 21
@@ -39,8 +45,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.jakewharton:butterknife:6.1.0'
@@ -48,6 +54,7 @@ dependencies {
     compile 'com.pusher:pusher-java-client:0.3.1'
     compile 'com.google.dagger:dagger:2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    debugCompile 'org.mockito:mockito-core:1.9.5'
 
     apt 'com.google.dagger:dagger-compiler:2.0'
 
@@ -57,16 +64,18 @@ dependencies {
     //releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
     // Testing-only dependencies
-    androidTestCompile 'com.android.support:support-annotations:22.1.1'
+    androidTestCompile 'com.android.support:support-annotations:22.2.0'
     androidTestCompile 'com.android.support.test:runner:0.2'
     androidTestCompile 'com.android.support.test:rules:0.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
     testCompile 'io.reactivex:rxandroid:0.24.0'
-    testCompile 'com.android.support:support-annotations:22.1.1'
+    testCompile 'com.android.support:support-annotations:22.2.0'
     testCompile 'com.android.support.test:runner:0.2'
     testCompile 'com.android.support.test:rules:0.2'
     //TODO ayni dependency'yi hem compile hem de testCompile'a yazmak zorunda miyiz?
